# SMREngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build_visual_studio_cmake.bat
src/: App.cpp  App.h  main.cpp
src/cmake/: define.cmake  function.cmake
src/editor/: Editor.cpp  Editor.h
src/gui/: gui_imgui.cpp  gui_imgui.h
src/gui/ImGui/: ImGuiExtension.cpp  ImGuiExtension.h
src/gui/ImGui/Implementation/: ImGui_RHI.h  ImGui_TransformGizmo.h  imgui_impl_sdl2.cpp
src/gui/ImGui/Source/: imgui.h
src/gui/ImGui/Source/ImGuizmo/: GraphEditor.cpp
src/runtime/: Definitions.h  pch.h
src/runtime/Core/: Engine.cpp  Engine.h  EngineMode.cpp  EngineMode.h  FileSystem.cpp  ProgressTracker.cpp  ProgressTracker.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h
src/runtime/Logging/: ILogger.h  Log.cpp  Log.h
src/runtime/Math/: BoundingBox.cpp  BoundingBox.h  MathHelper.h  Ray.cpp  Ray.h  RayHit.h  Rectangle.h  Vector2.h  Vector3.h  Vector4.h
src/runtime/RHI/: RHI_Definitions.h
src/runtime/window/: Window.cpp  Window.h
src/runtime/window/Display/: Display.cpp
src/runtime/window/Input/: InputMouse.cpp
